<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/pets1"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ht_text_username"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colortext"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ht_text_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colortext"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_login"
                android:onClick="BtnLogin"
                android:text="@string/btn_text_login"
                android:textColor="@drawable/style_loginbtn_selecter"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_login"
                android:onClick="btnGotoRegisterUser"
                android:text="@string/btn_text_Register"
                android:textColor="@drawable/style_loginbtn_selecter"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>