<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#9F9F9F"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserName_label"
            android:textColor="#FFF"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/style_register_user"
            android:layout_marginBottom="30dp"
            android:textColor="#ffff"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password_label"
            android:textColor="#ffff"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/style_register_user"
            android:layout_marginBottom="30dp"
            android:textColor="#ffff"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_register_label"
            android:background="#FF4747"
            android:textColor="#ffff"/>
    </LinearLayout>
</RelativeLayout>